[package]
name = "pallet-bridge-eth-poa"
description = "A Substrate Runtime module that is able to verify PoA headers and their finality."
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
serde = { version = "1.0", optional = true }
codec = { package = "parity-scale-codec", version = "1.0.0", default-features = false }
sp-std = { package = "sp-std", path = "../../primitives/sr-std", default-features = false }
support = { package = "frame-support", path = "../support", default-features = false }
sp-runtime = { path = "../../primitives/sr-primitives", default-features = false }
system = { package = "frame-system", path = "../system", default-features = false }
sp-io = { package = "sp-io", path = "../../primitives/sr-io", default-features = false }
primitives = { package = "sp-bridge-eth-poa", path = "../../primitives/bridge-eth-poa", default-features = false }

[dev-dependencies]
primitives = { package = "sp-bridge-eth-poa", path = "../../primitives/bridge-eth-poa", features = ["std", "test-helpers"] }
parity-crypto = { version = "0.4", features = ["publickey"] }

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"sp-std/std",
	"support/std",
	"sp-runtime/std",
	"system/std",
	"sp-io/std",
	"primitives/std",
]
