[package]
name = "substrate-secret-store-connector"
version = "1.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
log = "0.4.8"
parking_lot = "0.9"
sp-core = { path = "../../primitives/core" }
sp-runtime = { path = "../../primitives/runtime" }
ss-primitives = { path = "../primitives" }
