[package]
name = "substrate-secret-store-runtime"
version = "1.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
serde = { version = "1.0", optional = true }
codec = { package = "parity-scale-codec", version = "1.0.0", default-features = false }
sp-std = { path = "../../primitives/std", default-features = false }
frame-support = { path = "../../frame/support", default-features = false }
ss-primitives = { path = "../primitives", default-features = false }
frame-system = { path = "../../frame/system", default-features = false }
sp-io = { path = "../../primitives/io", default-features = false }
sp-core = { path = "../../primitives/core", default-features = false }

[dev-dependencies]
sp-runtime = { path = "../../primitives/runtime", default-features = false }
pallet-balances = { path = "../../frame/balances" }

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"sp-std/std",
	"frame-support/std",
	"ss-primitives/std",
	"frame-system/std",
	"sp-io/std",
	"sp-core/std",
]
